add advanced aggregations

--- a/Notebooks/Pandas_05_Data_Transformations.ipynb
+++ b/Notebooks/Pandas_05_Data_Transformations.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 86,
    "id": "4ec1829b",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 87,
    "id": "3ff16f5b",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
        "Name: body_mass_g, dtype: float64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 88,
    "id": "1e39e027",
    "metadata": {},
    "outputs": [
@@ -104,7 +104,7 @@
        "array(['Adelie', 'Gentoo', 'Chinstrap'], dtype=object)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 89,
    "id": "e541f231",
    "metadata": {},
    "outputs": [
@@ -179,7 +179,7 @@
        "Gentoo     26714.0  217.186992"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 90,
    "id": "65547f81",
    "metadata": {},
    "outputs": [
@@ -278,7 +278,7 @@
        "Gentoo              26714.0  217.186992  5076.016260  6300.0  3950.0"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 91,
    "id": "aa0fe506",
    "metadata": {},
    "outputs": [
@@ -307,7 +307,7 @@
        "Name: body_mass_g, dtype: int64"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,6 +315,394 @@
    "source": [
     "# Count non-null body_mass_g values for each species\n",
     "penguins_body_mass.groupby(\"species\")[\"body_mass_g\"].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "c9d565dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>max</th>\n",
+       "      <th>min</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>island</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Biscoe</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>2007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Dream</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>2007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Torgersen</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>2007</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            max   min\n",
+       "island               \n",
+       "Biscoe     2009  2007\n",
+       "Dream      2009  2007\n",
+       "Torgersen  2009  2007"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Advanced aggregations: applying multiple aggregation functions to summarize data.\n",
+    "\n",
+    "aggregations= penguins_body_mass.groupby(\"island\")[\"year\"].agg([\"max\",\"min\"])\n",
+    "aggregations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "0f497524",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>maximum year</th>\n",
+       "      <th>average_year</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>species</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Adelie</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>2008.013158</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Chinstrap</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>2007.970588</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Gentoo</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>2008.080645</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           maximum year  average_year\n",
+       "species                              \n",
+       "Adelie             2009   2008.013158\n",
+       "Chinstrap          2009   2007.970588\n",
+       "Gentoo             2009   2008.080645"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# To make results clearer, we can rename aggregation columns using a dictionary.\n",
+    "\n",
+    "renamed_columns={\n",
+    "    \"maximum year\":\"max\",\n",
+    "    \"average_year\":\"mean\"\n",
+    "}\n",
+    "aggregations= penguins_body_mass.groupby(\"species\")[\"year\"].agg(**renamed_columns)\n",
+    "aggregations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "4d778a2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>max_year</th>\n",
+       "      <th>min_year</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>island</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Biscoe</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>2007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Dream</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>2007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Torgersen</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>2007</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           max_year  min_year\n",
+       "island                       \n",
+       "Biscoe         2009      2007\n",
+       "Dream          2009      2007\n",
+       "Torgersen      2009      2007"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Applying different aggregation functions to multiple columns.\n",
+    "aggregations= penguins_body_mass.groupby(\"island\")[\"year\"].agg(max_year=\"max\",min_year=\"min\")\n",
+    "aggregations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "3611ed1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>flipper_length_mm</th>\n",
+       "      <th>bill_length_mm</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>island</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Biscoe</th>\n",
+       "      <td>172.0</td>\n",
+       "      <td>34.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Dream</th>\n",
+       "      <td>178.0</td>\n",
+       "      <td>32.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Torgersen</th>\n",
+       "      <td>176.0</td>\n",
+       "      <td>33.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           flipper_length_mm  bill_length_mm\n",
+       "island                                      \n",
+       "Biscoe                 172.0            34.5\n",
+       "Dream                  178.0            32.1\n",
+       "Torgersen              176.0            33.5"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Applying different aggregation functions to multiple columns.\n",
+    "penguins_body_mass.groupby(\"island\").agg({\"flipper_length_mm\":\"min\", \"bill_length_mm\":\"min\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "32033cfb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>average_body_mass</th>\n",
+       "      <th>unique_species_count</th>\n",
+       "      <th>std_body_mass</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>island</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Biscoe</th>\n",
+       "      <td>4716.017964</td>\n",
+       "      <td>2</td>\n",
+       "      <td>782.855743</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Dream</th>\n",
+       "      <td>3712.903226</td>\n",
+       "      <td>2</td>\n",
+       "      <td>416.644112</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Torgersen</th>\n",
+       "      <td>3706.372549</td>\n",
+       "      <td>1</td>\n",
+       "      <td>445.107940</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           average_body_mass  unique_species_count  std_body_mass\n",
+       "island                                                           \n",
+       "Biscoe           4716.017964                     2     782.855743\n",
+       "Dream            3712.903226                     2     416.644112\n",
+       "Torgersen        3706.372549                     1     445.107940"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Combine multiple aggregations into one grouped summary.\n",
+    "penguins_body_mass.groupby(\"island\").agg(\n",
+    "    average_body_mass=(\"body_mass_g\", \"mean\"),\n",
+    "    unique_species_count=(\"species\", \"nunique\"),\n",
+    "    std_body_mass=(\"body_mass_g\", \"std\") #standard deviation \n",
+    ")"
    ]
   }
  ],
