add few chaining transformation

--- a/Notebooks/Pandas_05_Data_Transformations.ipynb
+++ b/Notebooks/Pandas_05_Data_Transformations.ipynb
@@ -3742,6 +3742,530 @@
     "penguins[\"Gender_label\"]=penguins[\"Gender_label\"].replace({\"male\":\"Male\", \"female\":\"Female\"})\n",
     "penguins.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "049f712c",
+   "metadata": {},
+   "source": [
+    "# **Chaining Transformation**\n",
+    "Chaining in Pandas is like: combining multiple DataFrame operations into a single, readable line of code, where each step transforms the data and passes it to the next. Instead of writing clunky, separate lines that create temporary variables, chaining lets you streamline your workflow, making your code cleaner and more **Pythonic**.\n",
+    "\n",
+    "In Pandas, `chaining` means applying methods like filtering, grouping, or adding columns sequentially using the dot (`.`) notation. This approach is powerful for data cleaning and analysis because it allows us to combine multiple operations into a single, readable line of code, improving code conciseness and clarity."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "id": "34419898",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>rowid</th>\n",
+       "      <th>species</th>\n",
+       "      <th>island</th>\n",
+       "      <th>bill_length_mm</th>\n",
+       "      <th>bill_depth_mm</th>\n",
+       "      <th>flipper_length_mm</th>\n",
+       "      <th>body_mass_g</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>39.1</td>\n",
+       "      <td>18.7</td>\n",
+       "      <td>181.0</td>\n",
+       "      <td>3750.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>39.5</td>\n",
+       "      <td>17.4</td>\n",
+       "      <td>186.0</td>\n",
+       "      <td>3800.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>2007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>40.3</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>195.0</td>\n",
+       "      <td>3250.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>2007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>36.7</td>\n",
+       "      <td>19.3</td>\n",
+       "      <td>193.0</td>\n",
+       "      <td>3450.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>2007</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   rowid species     island  bill_length_mm  bill_depth_mm  flipper_length_mm  \\\n",
+       "0      1  Adelie  Torgersen            39.1           18.7              181.0   \n",
+       "1      2  Adelie  Torgersen            39.5           17.4              186.0   \n",
+       "2      3  Adelie  Torgersen            40.3           18.0              195.0   \n",
+       "3      4  Adelie  Torgersen             NaN            NaN                NaN   \n",
+       "4      5  Adelie  Torgersen            36.7           19.3              193.0   \n",
+       "\n",
+       "   body_mass_g     sex  year  \n",
+       "0       3750.0    male  2007  \n",
+       "1       3800.0  female  2007  \n",
+       "2       3250.0  female  2007  \n",
+       "3          NaN     NaN  2007  \n",
+       "4       3450.0  female  2007  "
+      ]
+     },
+     "execution_count": 195,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "penguins=pd.read_csv(\"..\\Datasets\\penguins.csv\")\n",
+    "penguins.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d11ca2c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>rowid</th>\n",
+       "      <th>species</th>\n",
+       "      <th>island</th>\n",
+       "      <th>bill_length_mm</th>\n",
+       "      <th>bill_depth_mm</th>\n",
+       "      <th>flipper_length_mm</th>\n",
+       "      <th>body_mass_g</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>39.1</td>\n",
+       "      <td>18.7</td>\n",
+       "      <td>181.0</td>\n",
+       "      <td>3750.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>39.3</td>\n",
+       "      <td>20.6</td>\n",
+       "      <td>190.0</td>\n",
+       "      <td>3650.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>39.2</td>\n",
+       "      <td>19.6</td>\n",
+       "      <td>195.0</td>\n",
+       "      <td>4675.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>14</td>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>38.6</td>\n",
+       "      <td>21.2</td>\n",
+       "      <td>191.0</td>\n",
+       "      <td>3800.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>15</td>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>34.6</td>\n",
+       "      <td>21.1</td>\n",
+       "      <td>198.0</td>\n",
+       "      <td>4400.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2007</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    rowid species     island  bill_length_mm  bill_depth_mm  \\\n",
+       "0       1  Adelie  Torgersen            39.1           18.7   \n",
+       "5       6  Adelie  Torgersen            39.3           20.6   \n",
+       "7       8  Adelie  Torgersen            39.2           19.6   \n",
+       "13     14  Adelie  Torgersen            38.6           21.2   \n",
+       "14     15  Adelie  Torgersen            34.6           21.1   \n",
+       "\n",
+       "    flipper_length_mm  body_mass_g   sex  year  \n",
+       "0               181.0       3750.0  male  2007  \n",
+       "5               190.0       3650.0  male  2007  \n",
+       "7               195.0       4675.0  male  2007  \n",
+       "13              191.0       3800.0  male  2007  \n",
+       "14              198.0       4400.0  male  2007  "
+      ]
+     },
+     "execution_count": 198,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "male=penguins[penguins[\"sex\"]==\"male\"]\n",
+    "male.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2dcc77e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\thapa.pra\\AppData\\Local\\Temp\\ipykernel_13820\\88283278.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  male[\"heavy\"]=male[\"body_mass_g\"]>3000\n"
+     ]
+    }
+   ],
+   "source": [
+    "male[\"heavy\"]=male[\"body_mass_g\"]>3000 \n",
+    "#we can ignore the message of this"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0e7a703",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>rowid</th>\n",
+       "      <th>species</th>\n",
+       "      <th>island</th>\n",
+       "      <th>bill_length_mm</th>\n",
+       "      <th>bill_depth_mm</th>\n",
+       "      <th>flipper_length_mm</th>\n",
+       "      <th>body_mass_g</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>year</th>\n",
+       "      <th>body_mass_kg</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>39.1</td>\n",
+       "      <td>18.7</td>\n",
+       "      <td>181.0</td>\n",
+       "      <td>3750.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>3.750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>39.3</td>\n",
+       "      <td>20.6</td>\n",
+       "      <td>190.0</td>\n",
+       "      <td>3650.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>3.650</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>39.2</td>\n",
+       "      <td>19.6</td>\n",
+       "      <td>195.0</td>\n",
+       "      <td>4675.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>4.675</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>14</td>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>38.6</td>\n",
+       "      <td>21.2</td>\n",
+       "      <td>191.0</td>\n",
+       "      <td>3800.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>3.800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>15</td>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>34.6</td>\n",
+       "      <td>21.1</td>\n",
+       "      <td>198.0</td>\n",
+       "      <td>4400.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>4.400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>334</th>\n",
+       "      <td>335</td>\n",
+       "      <td>Chinstrap</td>\n",
+       "      <td>Dream</td>\n",
+       "      <td>50.2</td>\n",
+       "      <td>18.8</td>\n",
+       "      <td>202.0</td>\n",
+       "      <td>3800.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>3.800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>336</th>\n",
+       "      <td>337</td>\n",
+       "      <td>Chinstrap</td>\n",
+       "      <td>Dream</td>\n",
+       "      <td>51.9</td>\n",
+       "      <td>19.5</td>\n",
+       "      <td>206.0</td>\n",
+       "      <td>3950.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>3.950</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>339</th>\n",
+       "      <td>340</td>\n",
+       "      <td>Chinstrap</td>\n",
+       "      <td>Dream</td>\n",
+       "      <td>55.8</td>\n",
+       "      <td>19.8</td>\n",
+       "      <td>207.0</td>\n",
+       "      <td>4000.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>4.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>341</th>\n",
+       "      <td>342</td>\n",
+       "      <td>Chinstrap</td>\n",
+       "      <td>Dream</td>\n",
+       "      <td>49.6</td>\n",
+       "      <td>18.2</td>\n",
+       "      <td>193.0</td>\n",
+       "      <td>3775.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>3.775</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>342</th>\n",
+       "      <td>343</td>\n",
+       "      <td>Chinstrap</td>\n",
+       "      <td>Dream</td>\n",
+       "      <td>50.8</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>210.0</td>\n",
+       "      <td>4100.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>4.100</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>168 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     rowid    species     island  bill_length_mm  bill_depth_mm  \\\n",
+       "0        1     Adelie  Torgersen            39.1           18.7   \n",
+       "5        6     Adelie  Torgersen            39.3           20.6   \n",
+       "7        8     Adelie  Torgersen            39.2           19.6   \n",
+       "13      14     Adelie  Torgersen            38.6           21.2   \n",
+       "14      15     Adelie  Torgersen            34.6           21.1   \n",
+       "..     ...        ...        ...             ...            ...   \n",
+       "334    335  Chinstrap      Dream            50.2           18.8   \n",
+       "336    337  Chinstrap      Dream            51.9           19.5   \n",
+       "339    340  Chinstrap      Dream            55.8           19.8   \n",
+       "341    342  Chinstrap      Dream            49.6           18.2   \n",
+       "342    343  Chinstrap      Dream            50.8           19.0   \n",
+       "\n",
+       "     flipper_length_mm  body_mass_g   sex  year  body_mass_kg  \n",
+       "0                181.0       3750.0  male  2007         3.750  \n",
+       "5                190.0       3650.0  male  2007         3.650  \n",
+       "7                195.0       4675.0  male  2007         4.675  \n",
+       "13               191.0       3800.0  male  2007         3.800  \n",
+       "14               198.0       4400.0  male  2007         4.400  \n",
+       "..                 ...          ...   ...   ...           ...  \n",
+       "334              202.0       3800.0  male  2009         3.800  \n",
+       "336              206.0       3950.0  male  2009         3.950  \n",
+       "339              207.0       4000.0  male  2009         4.000  \n",
+       "341              193.0       3775.0  male  2009         3.775  \n",
+       "342              210.0       4100.0  male  2009         4.100  \n",
+       "\n",
+       "[168 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 203,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Filter the DataFrame to include only male penguins and add a new column 'body_mass_kg' by converting 'body_mass_g' to kilograms\n",
+    "\n",
+    "penguins=penguins[penguins[\"sex\"]==\"male\"].assign(body_mass_kg=lambda df: df[\"body_mass_g\"] / 1000) \n",
+    "penguins"
+   ]
   }
  ],
  "metadata": {
