added few notes in markdown

--- a/Notebooks/Pandas_05_Data_Transformations.ipynb
+++ b/Notebooks/Pandas_05_Data_Transformations.ipynb
@@ -4665,6 +4665,207 @@
     ")\n",
     "merged"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2337a328",
+   "metadata": {},
+   "source": [
+    "\n",
+    "---\n",
+    "\n",
+    "## Summary\n",
+    "\n",
+    "| Concept       | Why Use It?                                | Example Usage                        |\n",
+    "|---------------|-------------------------------------------|------------------------------------|\n",
+    "| `reset_index` | To reset row numbering to sequential order | `df.reset_index(drop=True, inplace=True)` |\n",
+    "| `.copy()`     | To create an independent DataFrame copy  | `df_copy = df_original.copy()`     |\n",
+    "\n",
+    "Using these two methods helps prevent index confusion and warnings while making your data clean and safe to change.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc2721aa",
+   "metadata": {},
+   "source": [
+    "# Advanced Chaining Techniques\n",
+    "\n",
+    "Chaining means applying multiple methods in one continious stream eg: `df.query(...).assign(...).groupby(...).agg(...)` .\n",
+    "<br>\n",
+    "It makes code compact, readable and aligned with data Transformations with logic. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "id": "2bbd377f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>rowid</th>\n",
+       "      <th>species</th>\n",
+       "      <th>island</th>\n",
+       "      <th>bill_length_mm</th>\n",
+       "      <th>bill_depth_mm</th>\n",
+       "      <th>flipper_length_mm</th>\n",
+       "      <th>body_mass_g</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>39.1</td>\n",
+       "      <td>18.7</td>\n",
+       "      <td>181.0</td>\n",
+       "      <td>3750.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>39.5</td>\n",
+       "      <td>17.4</td>\n",
+       "      <td>186.0</td>\n",
+       "      <td>3800.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>2007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>40.3</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>195.0</td>\n",
+       "      <td>3250.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>2007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>36.7</td>\n",
+       "      <td>19.3</td>\n",
+       "      <td>193.0</td>\n",
+       "      <td>3450.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>2007</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   rowid species     island  bill_length_mm  bill_depth_mm  flipper_length_mm  \\\n",
+       "0      1  Adelie  Torgersen            39.1           18.7              181.0   \n",
+       "1      2  Adelie  Torgersen            39.5           17.4              186.0   \n",
+       "2      3  Adelie  Torgersen            40.3           18.0              195.0   \n",
+       "3      4  Adelie  Torgersen             NaN            NaN                NaN   \n",
+       "4      5  Adelie  Torgersen            36.7           19.3              193.0   \n",
+       "\n",
+       "   body_mass_g     sex  year  \n",
+       "0       3750.0    male  2007  \n",
+       "1       3800.0  female  2007  \n",
+       "2       3250.0  female  2007  \n",
+       "3          NaN     NaN  2007  \n",
+       "4       3450.0  female  2007  "
+      ]
+     },
+     "execution_count": 215,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "penguins=pd.read_csv(\"..\\Datasets\\penguins.csv\")\n",
+    "penguins.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ab9b169",
+   "metadata": {},
+   "source": [
+    "# Pandas Method Chaining:\n",
+    "---\n",
+    "\n",
+    "## Core Methods\n",
+    "\n",
+    "- `.query()` — Filter rows with readable SQL-like conditions  \n",
+    "  Example: `df.query('sex == \"male\"')`\n",
+    "\n",
+    "- `.assign()` — Add or modify columns inline  \n",
+    "  Example: `df.assign(body_mass_kg=lambda x: x.body_mass_g / 1000)`\n",
+    "\n",
+    "- `.groupby()` — Group data by category for aggregation  \n",
+    "  Example: `df.groupby('species').mean()`\n",
+    "\n",
+    "- `.agg()` — Apply multiple summary stats on grouped data  \n",
+    "  Example: `.agg({'body_mass_kg': 'mean', 'flipper_length_mm': 'max'})`\n",
+    "\n",
+    "- `.pipe()` — Insert custom functions into your chain cleanly  \n",
+    "  Example: `df.pipe(custom_func)`\n",
+    "\n",
+    "---\n",
+    "## Tips\n",
+    "\n",
+    "- Use `.query()` for clear filtering.  \n",
+    "- Use `.assign()` to avoid intermediate variables.  \n",
+    "- Chain `.groupby()` and `.agg()` for summaries.  \n",
+    "- Use `.pipe()` for custom transformations. \n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8c489af",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
